fix hover on mobile [close #18]

--- a/less/services.less
+++ b/less/services.less
@@ -103,9 +103,13 @@
 
 @media (max-width: 767px) {
     .services {
+        text-align: center;
+
         &__link {
+            display: inline-block;
             text-align: center;
-            width: 100%;
+            width: auto;
+            max-width: 100%;
             padding: 1rem;
 
             &:after {
